<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>VolumeTool</class>
 <widget class="QWidget" name="VolumeTool">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>100</width>
    <height>350</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="QWidget" name="volumeBox" native="true">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>80</width>
     <height>300</height>
    </rect>
   </property>
   <widget class="QPushButton" name="slienceBtn">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>260</y>
      <width>80</width>
      <height>35</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>80</width>
      <height>35</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>80</width>
      <height>35</height>
     </size>
    </property>
    <property name="text">
     <string>静音</string>
    </property>
   </widget>
   <widget class="QLabel" name="volumeValue">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>230</y>
      <width>80</width>
      <height>30</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>0</width>
      <height>30</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>16777215</width>
      <height>30</height>
     </size>
    </property>
    <property name="text">
     <string>TextLabel</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignmentFlag::AlignCenter</set>
    </property>
   </widget>
   <widget class="QWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
      <width>80</width>
      <height>225</height>
     </rect>
    </property>
    <widget class="QFrame" name="inLine">
     <property name="geometry">
      <rect>
       <x>38</x>
       <y>20</y>
       <width>4</width>
       <height>200</height>
      </rect>
     </property>
     <property name="frameShape">
      <enum>QFrame::Shape::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Shadow::Raised</enum>
     </property>
    </widget>
    <widget class="QFrame" name="outLine">
     <property name="geometry">
      <rect>
       <x>38</x>
       <y>120</y>
       <width>4</width>
       <height>100</height>
      </rect>
     </property>
     <property name="frameShape">
      <enum>QFrame::Shape::StyledPanel</enum>
     </property>
     <property name="frameShadow">
      <enum>QFrame::Shadow::Raised</enum>
     </property>
    </widget>
    <widget class="QPushButton" name="sliderBtn">
     <property name="geometry">
      <rect>
       <x>33</x>
       <y>118</y>
       <width>14</width>
       <height>7</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
